# kacky_schedule

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  api_handler.py  app.py  bot.py  bot.yaml  config.yaml  kacky_api_handler.py  requirements.txt  servers.yaml  setup.cfg  setup.py  tm_format_resolver.py
.github/workflows/: ci.yml
datastructures/: playlist.py  server.py
db_ops/: alarm_checker.py
discord_notification/: bot.py  kacky_notifier_cog.py
src/kacky_eventpage_backend/: app.py  bot.py  kacky_api_handler.py
src/kacky_eventpage_backend/datastructures/: playlist.py  server.py
src/kacky_eventpage_backend/db_ops/: alarm_checker.py
src/kacky_eventpage_backend/discord_notification/: kacky_notifier_cog.py
src/kacky_eventpage_backend/kacky_api/: kacky_api_handler.py  testing_data.py
src/kacky_eventpage_backend/templates/: error.html  index.html
src/kacky_schedule/: app.py  bot.py  kacky_api_handler.py  tm_format_resolver.py
src/kacky_schedule/datastructures/: playlist.py  server.py
src/kacky_schedule/db_ops/: alarm_checker.py
src/kacky_schedule/discord_notification/: kacky_notifier_cog.py
src/kacky_schedule/usermanagement/: user_operations.py  user_session_handler.py
src/kk_schedule/: app.py  bot.py  kacky_api_handler.py  tmx_api_handler.py
src/kk_schedule/datastructures/: server.py
src/kk_schedule/db_ops/: alarm_checker.py
src/kk_schedule/templates/: error.html
src/kk_schedule/usermanagement/: user_operations.py  user_session_handler.py
static/: index-content.css  login-content.css  styles-legacy.css  styles.css  user-content.css
templates/: error.html  index.html  leaderboard.html  login.html  schedule.html  stats.html  user.html
usermanagement/: user_operations.py  user_session_handler.py  usermanager.py
