[metadata]
name = kk_schedule
description = Map rotation schedule for KK/KR/KX events.
author = corkscrew
author_email = corkscrew@dingens.me
license = Unlicense
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://kacky.dingens.me

project_urls =
    Documentation = https://github.com/dremerb/kk_schedule/README.md
    Source = https://github.com/dremerb/kk_schedule

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Environment :: Web Environment
    Framework :: Flask


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

install_requires =
    importlib-metadata; python_version<"3.8"
    Flask
    flask_login
    PyYAML
    requests


[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit

[options.entry_points]
# Add here console scripts like:
console_scripts =
    start_kk_schedule = kk_schedule.app
# For example:
# console_scripts =
#     fibonacci = kk_schedule.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.2.3
package = kk_schedule
extensions =
    github_actions
    no_skeleton
    pre_commit
